--- a/css/test.css
+++ b/css/test.css
@@ -1,30 +1,14 @@
-table{
+.chess_board{
     width: 60%;
-    border-collapse:separate;
-    background-color:white;
-    border-spacing: 0;}
-table th:first-child{
-    border-radius: 5px 0 0 0;}
-table th:last-child{
-    border-radius: 0 5px 0 0;
-    border-right: 1px solid #3c6690;}
-table tr:nth-child(odd){
-    background-color: lightgray;}
-table th{
-    text-align: center;
-    color:white;
-    background: linear-gradient(#829ebc,#225588);
-    border-left: 1px solid #3c6690;
-    border-top: 1px solid #3c6690;
-    border-bottom: 1px solid #3c6690;
-    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
-    padding: 10px 0;}
-table td{text-align: center;
-    border-left: 1px solid #a8b7c5;
-    border-bottom: 1px solid #a8b7c5;
-    border-top:none;
-    box-shadow: 0px -3px 5px 1px #eee inset;
-    padding: 10px 0;}
-table td:last-child{  border-right: 1px solid #a8b7c5;}
-table tr:last-child td:first-child {  border-radius: 0 0 0 5px;}
-table tr:last-child td:last-child {border-radius: 0 0 5px 0;}
+    border-collapse:collapse;
+    background-color:darkred;}
+table tr:nth-child(odd) td:nth-child(odd){
+    background-color: #FEFDBD;}
+table tr:nth-child(even) td:nth-child(even){
+    background-color: #FEFDBD;}
+td {
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+    padding: 2px;
+}
