--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-  background: cover;
+  background-size: cover;
+  background-position: 50%;
 }
 
 table{
@@ -47,7 +48,7 @@ button {
   cursor: pointer; /* カーソルを指マークに */
   border-radius: 3px; /* 角の丸み */
   border: 0; /* 枠線を消す */
-  transition: 0.3s; /* ホバーの変化を滑らかに */}
+  transition: 0.6s; /* ホバーの変化を滑らかに */}
 /* ホバー時（カーソルをのせた時）の見た目 */
 button:hover {
   background-color: lime; /* 背景色 */
@@ -72,5 +73,6 @@ anim-box.slidein.is-animated {
   100% {transform: translateX(0);}
   40%,100% {opacity: 1;}
 }
+
 
 
