--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ table td:last-child{  border-right: 1px solid #a8b7c5;}
 table tr:last-child td:first-child {  border-radius: 0 0 0 5px;}
 table tr:last-child td:last-child {border-radius: 0 0 5px 0;}
 
-button {
+.black_button {
   /* ブラウザ特有のスタイルを無効に */
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -50,10 +50,10 @@ button {
   border: 0; /* 枠線を消す */
   transition: 0.6s; /* ホバーの変化を滑らかに */}
 /* ホバー時（カーソルをのせた時）の見た目 */
-button:hover {
+.black_button:hover {
   background-color: lime; /* 背景色 */
 }
-button[disabled] {
+.black_button[disabled] {
   color: darkred;
   background: black;
   cursor: not-allowed;
