--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ table td:last-child{  border-right: 1px solid #a8b7c5;}
 table tr:last-child td:first-child {  border-radius: 0 0 0 5px;}
 table tr:last-child td:last-child {border-radius: 0 0 5px 0;}
 
-.black_button {
+black_button {
   /* ブラウザ特有のスタイルを無効に */
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -50,7 +50,7 @@ table tr:last-child td:last-child {border-radius: 0 0 5px 0;}
   border: 0; /* 枠線を消す */
   transition: 0.6s; /* ホバーの変化を滑らかに */}
 /* ホバー時（カーソルをのせた時）の見た目 */
-.black_button:hover {
+black_button:hover {
   background-color: lime; /* 背景色 */
 }
 .black_button[disabled] {
