--- a/pages/style1.css
+++ b/pages/style1.css
@@ -82,4 +82,19 @@ button[disabled] {
   background-color: deepskyblue;
 }
 
-
+.button4{
+  /* ブラウザ特有のスタイルを無効に */
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  /* 整える */
+  margin: 0em 0; /* 前後の隙間 */
+  padding: 0em 0em; /* 塗りの余白 */
+  font-size: 0.02em; /* フォントサイズ */
+  background-color: gray; /* 背景色 */
+  color: #FFF; /* テキストカラー */
+  cursor: pointer; /* カーソルを指マークに */
+  border-radius: 0.3px; /* 角の丸み */
+  border: 0; /* 枠線を消す */
+  transition: 0.2s; /* ホバーの変化を滑らかに */}
+/* ホバー時（カーソルをのせた時）の見た目 */
