--- a/pages/style1.css
+++ b/pages/style1.css
@@ -97,4 +97,34 @@ button[disabled] {
   border-radius: 0.3px; /* 角の丸み */
   border: 0; /* 枠線を消す */
   transition: 0.2s; /* ホバーの変化を滑らかに */}
-/* ホバー時（カーソルをのせた時）の見た目 */
+
+.button5{
+  /* ブラウザ特有のスタイルを無効に */
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  /* 整える */
+  margin: 0em 0; /* 前後の隙間 */
+  padding: 0em 0em; /* 塗りの余白 */
+  font-size: 0.8em; /* フォントサイズ */
+  background-color: gray; /* 背景色 */
+  color: #FFF; /* テキストカラー */
+  cursor: pointer; /* カーソルを指マークに */
+  border-radius: 0.3px; /* 角の丸み */
+  border: 0; /* 枠線を消す */
+  transition: 0.2s; /* ホバーの変化を滑らかに */}
+
+
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
+/*input[type="checkbox"] { display: none; }*/ /* to hide the checkbox itself */
+input[type=checkbox] + label:before {
+  font-family: FontAwesome;
+  display: inline-block;
+}
+
+input[type=checkbox] + label:before { content: "\f096"; } /* unchecked icon */
+input[type=checkbox] + label:before { letter-spacing: 10px; } /* space between checkbox and label */
+
+input[type=checkbox]:checked + label:before { content: "\f046"; } /* checked icon */
+input[type=checkbox]:checked + label:before { letter-spacing: 5px; } /* allow space for check mark */}
