--- a/pages/style1.css
+++ b/pages/style1.css
@@ -104,7 +104,7 @@ button[disabled] {
   -webkit-appearance: none;
   appearance: none;
   /* 整える */
-  margin: 0em 0; /* 前後の隙間 */
+  margin: 0.4em 0.4; /* 前後の隙間 */
   padding: 0em 0em; /* 塗りの余白 */
   font-size: 0.8em; /* フォントサイズ */
   background-color: gray; /* 背景色 */
@@ -113,6 +113,11 @@ button[disabled] {
   border-radius: 0.3px; /* 角の丸み */
   border: 0; /* 枠線を消す */
   transition: 0.2s; /* ホバーの変化を滑らかに */}
+.button5:hover,
+.button5:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+  background-color: darkred;
 
 
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
