--- a/pages/test4/test5.css
+++ b/pages/test4/test5.css
@@ -1,13 +1,62 @@
-html,
-body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+body{
+    background-size: cover;
+    background-position: 50%;
 }
 
-#particle-canvas {
+.box1{
+/*    background-color: blue;
+    opacity: .2;*/
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
+.box2{
+/*    background-color: black;
+    opacity: .2;*/
+    width: 30%;
+}
+.wrap{
+    display:flex;
+}
+.box{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+table{
+    width: 140%;
+    border-collapse:separate;
+    background-color:white;
+    border-spacing: 0;
+    /*position: relative;*/
+    }
+table th:first-child{
+    border-radius: 5px 0 0 0;}
+table th:last-child{
+    border-radius: 0 5px 0 0;
+    border-right: 1px solid #3c6690;}
+table tr:nth-child(odd){
+    background-color: lightgray;}
+table th{
+    text-align: center;
+    color:white;
+    background: linear-gradient(#829ebc,#225588);
+    border-left: 1px solid #3c6690;
+    border-top: 1px solid #3c6690;
+    border-bottom: 1px solid #3c6690;
+    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+    padding: 10px 0;}
+table td{text-align: center;
+    border-left: 1px solid #a8b7c5;
+    border-bottom: 1px solid #a8b7c5;
+    border-top:none;
+    box-shadow: 0px -3px 5px 1px #eee inset;
+    padding: 10px 0;}
+table td:last-child{  border-right: 1px solid #a8b7c5;}
+table tr:last-child td:first-child {  border-radius: 0 0 0 5px;}
+table tr:last-child td:last-child {border-radius: 0 0 5px 0;}
+
+/*
+.players_list{
+    left: 100%;
+}*/
