--- a/pages/test7/Mr_button.css
+++ b/pages/test7/Mr_button.css
@@ -1,27 +1,27 @@
-button {
-    /* ブラウザ特有のスタイルを無効に */
+/*button {
+    !* ブラウザ特有のスタイルを無効に *!
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
-    /* 整える */
-    margin: 0.5em 0.5; /* 前後の隙間 */
-    padding: 0.6em 1em; /* 塗りの余白 */
-    font-size: 1em; /* フォントサイズ */
-    background-color: antiquewhite; /* 背景色 */
-    color: lightpink; /* テキストカラー */
-    cursor: pointer; /* カーソルを指マークに */
-    border-radius: 3px; /* 角の丸み */
-    border: 0; /* 枠線を消す */
-    transition: 0.2s; /* ホバーの変化を滑らかに */}
-/* ホバー時（カーソルをのせた時）の見た目 */
+    !* 整える *!
+    margin: 0.5em 0.5; !* 前後の隙間 *!
+    padding: 0.6em 1em; !* 塗りの余白 *!
+    font-size: 1em; !* フォントサイズ *!
+    background-color: antiquewhite; !* 背景色 *!
+    color: lightpink; !* テキストカラー *!
+    cursor: pointer; !* カーソルを指マークに *!
+    border-radius: 3px; !* 角の丸み *!
+    border: 0; !* 枠線を消す *!
+    transition: 0.2s; !* ホバーの変化を滑らかに *!}
+!* ホバー時（カーソルをのせた時）の見た目 *!
 button:hover {
-    background-color: hotpink; /* 背景色 */
+    background-color: hotpink; !* 背景色 *!
 }
 button[disabled] {
     color: darkred;
     background: black;
     cursor: not-allowed;
-}
+}*/
 
 .button3 {
     /* ブラウザ特有のスタイルを無効に */
