--- a/pages/test7/Mr_button.css
+++ b/pages/test7/Mr_button.css
@@ -32,8 +32,8 @@ button[disabled] {
     margin: 0em 0; /* 前後の隙間 */
     padding: 0.2em 0.4em; /* 塗りの余白 */
     font-size: 1em; /* フォントサイズ */
-    background-color: white; /* 背景色 */
-    color: red; /* テキストカラー */
+    background-color: black; /* 背景色 */
+    color: white; /* テキストカラー */
     cursor: pointer; /* カーソルを指マークに */
     border-radius: 3px; /* 角の丸み */
     border: 0; /* 枠線を消す */
@@ -43,7 +43,7 @@ button[disabled] {
 .button3:focus {
     box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
     transform: translateY(-0.25em);
-    background-color: hotpink;
+    background-color: deepskyblue;
 }
 
 .button4{
@@ -71,7 +71,7 @@ button[disabled] {
     margin: 0.4em 0.4; /* 前後の隙間 */
     padding: 0.1em 0.3em; /* 塗りの余白 */
     font-size: 0.8em; /* フォントサイズ */
-    background-color: antiquewhite; /* 背景色 */
+    background-color: orangered; /* 背景色 */
     color: #FFF; /* テキストカラー */
     cursor: pointer; /* カーソルを指マークに */
     border-radius: 0.3px; /* 角の丸み */
@@ -81,7 +81,7 @@ button[disabled] {
 .button5:focus {
     box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
     transform: translateY(-0.2em);
-    background-color: deeppink;
+    background-color: deepskyblue;
 }
 
 .button6 {
