--- a/pages/test9/20220516/test12.css
+++ b/pages/test9/20220516/test12.css
@@ -1,30 +1,36 @@
-/* カーソルを重ねる要素 */
 .tooltip {
-    position: relative; /* ツールチップの位置の基準に */
-    cursor: pointer; /* カーソルを当てたときにポインターに */
+    position: relative;
+    cursor: pointer;
 }
-
-/* ツールチップのテキスト */
-.tooltip-text {
-    opacity: 0; /* はじめは隠しておく */
-    visibility: hidden; /* はじめは隠しておく */
-    position: absolute; /* 絶対配置 */
-    left: 100%; /* 親に対して中央配置 */
-    transform: translateX(10%); /* 親に対して中央配置 */
-    bottom: 0px; /* 親要素下からの位置 */
-    display: inline-block;
-    padding: 5px; /* 余白 */
-    white-space: nowrap; /* テキストを折り返さない */
-    font-size: 0.8rem; /* フォントサイズ */
-    line-height: 1.3; /* 行間 */
-    background: #333; /* 背景色 */
-    color: #fff; /* 文字色 */
-    border-radius: 3px; /* 角丸 */
-    transition: 0.3s ease-in; /* アニメーション */
-}
-
-/* ホバー時にツールチップの非表示を解除 */
 .tooltip:hover .tooltip-text {
-    opacity: 1;
-    visibility: visible;
+     opacity: 1;
+     visibility: visible;
+ }
+
+.tooltip-text {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -35px;
+    display: inline-block;
+    padding: 5px;
+    white-space: nowrap;
+    font-size: 10.5px;
+    line-height: 1.3;
+    background: #333;
+    color: #fff;
+    border-radius: 3px;
+    transition: 0.3s ease-in;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
+.tooltip-text:before {
+     content: '';
+     position: absolute;
+     top: -13px;
+     left: 50%;
+     margin-left: -7px;
+     border: 7px solid transparent;
+     border-bottom: 7px solid #333;
+ }
