--- a/pages/test9/20220516/bootstrap.css
+++ b/pages/test9/20220516/bootstrap.css
@@ -96,7 +96,7 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
 #header .logo h1 a, #header .logo h1 a:hover {
-    color: orangered;
+    color: white;
     text-decoration: none;
 }
 #header .logo img {
