--- a/pages/test9/20220516/assets/css/style.css
+++ b/pages/test9/20220516/assets/css/style.css
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
   background: transparent;
 }
 #header.header-scrolled {
-  background: yellow;
+  background: rgba(55, 142, 181, 0.9);
   padding: 12px;
 }
 #header .logo h1 {
@@ -96,7 +96,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: orangered;
+  color: #fff;
   text-decoration: none;
 }
 #header .logo img {
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
   font-size: 16px;
   font-weight: 700;
-  color: orange;
+  color: #fff;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -233,7 +233,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: yellow;
+  background: rgba(43, 111, 142, 0.9);
   transition: 0.3s;
 }
 .navbar-mobile .mobile-nav-toggle {
@@ -297,7 +297,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(0, 155, 255, 0.25), rgba(55, 142, 181, 0.1)), url("../img/hero-bg.jpg") top center;
+  background: linear-gradient(rgba(55, 142, 181, 0.5), rgba(55, 142, 181, 0.2)), url("../img/hero-bg.jpg") top center;
   background-size: cover;
   position: relative;
   margin-bottom: -90px;
@@ -482,7 +482,7 @@ section {
 }
 .about .content .about-btn {
   display: inline-block;
-  background: greenyellow;
+  background: #67b0d1;
   padding: 6px 44px 8px 30px;
   color: #fff;
   border-radius: 50px;
@@ -496,14 +496,14 @@ section {
   top: 9px;
 }
 .about .content .about-btn:hover {
-  background: yellowgreen;
+  background: #7bbad7;
 }
 .about .icon-boxes .icon-box {
   margin-top: 30px;
 }
 .about .icon-boxes .icon-box i {
   font-size: 40px;
-  color: yellowgreen;
+  color: #67b0d1;
   margin-bottom: 10px;
 }
 .about .icon-boxes .icon-box h4 {
@@ -551,7 +551,7 @@ section {
   z-index: -1;
 }
 .services .icon-box:hover::before {
-  background: yellowgreen;
+  background: #67b0d1;
   top: 0;
   border-radius: 0px;
 }
@@ -561,7 +561,7 @@ section {
 .services .icon i {
   font-size: 48px;
   line-height: 1;
-  color: yellowgreen;
+  color: #67b0d1;
   transition: all 0.3s ease-in-out;
 }
 .services .title {
@@ -597,7 +597,7 @@ section {
 .counts .count-box i {
   display: block;
   font-size: 44px;
-  color: yellowgreen;
+  color: #67b0d1;
   float: left;
   line-height: 0;
 }
@@ -633,7 +633,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(255, 176, 0, 0.8), rgba(103, 176, 209, 0.8)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(103, 176, 209, 0.8), rgba(103, 176, 209, 0.8)), url("../img/cta-bg.jpg") fixed center center;
   background-size: cover;
   padding: 60px 0;
 }
