--- a/pages/test9/20220516/test12.css
+++ b/pages/test9/20220516/test12.css
@@ -1,36 +1,33 @@
-.tooltip {
-    position: relative;
-    cursor: pointer;
-}
-.tooltip:hover .tooltip-text {
-     opacity: 1;
-     visibility: visible;
- }
+.slider {
+    width: 300px;
+    　　height: 200px;
+    　　overflow: hidden;
+    　　margin: 0 auto;
 
-.tooltip-text {
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: -35px;
-    display: inline-block;
-    padding: 5px;
-    white-space: nowrap;
-    font-size: 10.5px;
-    line-height: 1.3;
-    background: #333;
-    color: #fff;
-    border-radius: 3px;
-    transition: 0.3s ease-in;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
-.tooltip-text:before {
-     content: '';
-     position: absolute;
-     top: -13px;
-     left: 50%;
-     margin-left: -7px;
-     border: 7px solid transparent;
-     border-bottom: 7px solid #333;
- }
+.slider-item {
+    width: 300px;
+    float: left;
+}
+img{
+    width:100%;
+}
+.slider-inner {
+    width: 300%;
+    animation: slider 10s infinite ease;
+}
+
+@keyframes slider {
+    0% {
+        transform: translateX(0);
+    }
+    33% {
+        transform: translateX(-300px);
+    }
+    66% {
+        transform: translateX(-600px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
